添加更多文案

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -29,28 +29,108 @@
   "quirk.toneko.caress.be_used": "§dYou were gently petted by %s",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "Eh? Do you have any idea about Crystal_Neko?",
-  "quirk.toneko.crystal_neko.damage.critical": "§aHey, owner, your HP is low meow~ You need to replenish it as soon as possible~",
-  "quirk.toneko.crystal_neko.damage.low": "§aAre you okay, owner meow?",
-  "quirk.toneko.crystal_neko.damage.medium": "§aowner, do you feel pain meow~",
-  "quirk.toneko.crystal_neko.damage.high": "§aWow wow wow, owner, it hurts, be careful meow~",
-  "quirk.toneko.crystal_neko.join": "§aJiang Jiang~ Welcome to join meow~",
-  "quirk.toneko.crystal_neko.attack.high": "§aFight, owner, I believe you can win meow~",
-  "quirk.toneko.crystal_neko.attack.medium": "§aCome on, you've fought hard meow~",
-  "quirk.toneko.crystal_neko.attack.low": "§aGreat, victory is not far away meow~",
-  "quirk.toneko.crystal_neko.attack.critical": "§aTry harder, victory is just around the corner~",
-  "quirk.toneko.crystal_neko.attack.dead": "§aGreat, I won successfully meow~",
-  "quirk.toneko.zako": "Zako",
-  "quirk.toneko.zako.des": "♡Zako Zako～♡",
-  "quirk.toneko.zako.damage.critical": "§cHey, how come you can't even protect yourself, you're too weak～",
-  "quirk.toneko.zako.damage.low": "§cYou must be hurt, zako～",
-  "quirk.toneko.zako.damage.medium": "§cYou're hurt, zako～",
-  "quirk.toneko.zako.damage.high": "§cHey, you accidentally let yourself get hurt so much, you're really a zako～",
-  "quirk.toneko.zako.join": "§cIsn't this a zako～Why are you here",
-  "quirk.toneko.zako.attack.high": "§cCan you beat me, zako～",
-  "quirk.toneko.zako.attack.medium": "§cIt took you so long to knock down this amount of HP, how come you are so weak~",
-  "quirk.toneko.zako.attack.low": "§cYou look pretty good, you little fry~",
-  "quirk.toneko.zako.attack.critical": "§cHey, you are actually going to succeed?",
-  "quirk.toneko.zako.attack.dead": "§aGood, good, you are awesome~",
+  "quirk.toneko.crystal_neko.damage.critical.0": "§aOh no, Master, your health is really low nya~ Need to replenish it as soon as possible!",
+  "quirk.toneko.crystal_neko.damage.critical.1": "§aSoul drifting away? I'll call you back with cat language!",
+  "quirk.toneko.crystal_neko.damage.critical.2": "§aSync your breathing with my purring rhythm!",
+  "quirk.toneko.crystal_neko.damage.critical.3": "§aDon't be afraid, Master, I'm here for you!",
+  "quirk.toneko.crystal_neko.damage.critical.4": "§aYou must get better~ I'll stay with you always nya~",
+  "quirk.toneko.crystal_neko.damage.low.0": "§aNo big deal, Master nya?",
+  "quirk.toneko.crystal_neko.damage.low.1": "§aI-I wasn't worried about you, idiot!",
+  "quirk.toneko.crystal_neko.damage.low.2": "§aHmph, this little injury is nothing!",
+  "quirk.toneko.crystal_neko.damage.low.3": "§aThat wrestling pose... barely counts as cute!",
+  "quirk.toneko.crystal_neko.damage.low.4": "§aI told you to be more careful!",
+  "quirk.toneko.crystal_neko.damage.medium.0": "§aDoes it hurt, Master nya~?",
+  "quirk.toneko.crystal_neko.damage.medium.1": "§aBorrow my tail for five minutes!",
+  "quirk.toneko.crystal_neko.damage.medium.2": "§aNow you know to ask me to stay with you!",
+  "quirk.toneko.crystal_neko.damage.medium.3": "§aBlood on the carpet... go clean it up!",
+  "quirk.toneko.crystal_neko.damage.medium.4": "§aI'll let you rub against me since you tried hard!",
+  "quirk.toneko.crystal_neko.damage.high.0": "§aWow, Master, that hurts a lot! Be more careful nya~",
+  "quirk.toneko.crystal_neko.damage.high.1": "§aYou'll get better, that's my cat's prophecy!",
+  "quirk.toneko.crystal_neko.damage.high.2": "§aThe cherry blossoms are blooming... waiting for you to see them!",
+  "quirk.toneko.crystal_neko.damage.high.3": "§aHealing successful! I'll show you my paw pad stamp!",
+  "quirk.toneko.crystal_neko.damage.high.4": "§aThe hospital is cold, so hide in my fur!",
+  "quirk.toneko.crystal_neko.join.0": "§aWelcome to join nya~",
+  "quirk.toneko.crystal_neko.join.1": "§aNew nest has a strange smell... warm it with body heat!",
+  "quirk.toneko.crystal_neko.join.2": "§aOfficial poop scooper certification is ready~",
+  "quirk.toneko.crystal_neko.join.3": "§aCardboard box base is half yours... not special treatment, of course!",
+  "quirk.toneko.crystal_neko.join.4": "§aHair brushing service is available today!",
+  "quirk.toneko.crystal_neko.attack.high.0": "§aFight, Master! I believe in you nya~",
+  "quirk.toneko.crystal_neko.attack.high.1": "§aWarm-up exercises need three hours, idiot!",
+  "quirk.toneko.crystal_neko.attack.high.2": "§aIf you hold back, I'll make you shovel cat litter for three days!",
+  "quirk.toneko.crystal_neko.attack.high.3": "§aEnemy openings are more than my knocked-over water cup!",
+  "quirk.toneko.crystal_neko.attack.high.4": "§aThis level? Can't even open a can!",
+  "quirk.toneko.crystal_neko.attack.medium.0": "§aGood luck, Master! You've been fighting hard nya~",
+  "quirk.toneko.crystal_neko.attack.medium.1": "§aBlood splattered three meters away? Reward: hair brushing service!",
+  "quirk.toneko.crystal_neko.attack.medium.2": "§aBreathing rhythm? Copy my purring frequency!",
+  "quirk.toneko.crystal_neko.attack.medium.3": "§aBefore finishing blows, strike the victory pose I taught you!",
+  "quirk.toneko.crystal_neko.attack.medium.4": "§aEnemy cries are worse than a broken bell!",
+  "quirk.toneko.crystal_neko.attack.low.0": "§aAlmost there, victory is near nya~",
+  "quirk.toneko.crystal_neko.attack.low.1": "§aThat critical hit... barely passes, I guess!",
+  "quirk.toneko.crystal_neko.attack.low.2": "§aIf damage is over 10%, no more fish for you!",
+  "quirk.toneko.crystal_neko.attack.low.3": "§aFinal blow must create cherry blossom blood!",
+  "quirk.toneko.crystal_neko.attack.low.4": "§aEnemy begging for mercy? Use it as lullaby!",
+  "quirk.toneko.crystal_neko.attack.critical.0": "§aAlmost there, Master! Victory is ahead!",
+  "quirk.toneko.crystal_neko.attack.critical.1": "§aSelf-destruct countdown... like chasing my tail!",
+  "quirk.toneko.crystal_neko.attack.critical.2": "§aOverheating? Imagine scratching the sofa!",
+  "quirk.toneko.crystal_neko.attack.critical.3": "§aBefore your soul leaves, call my name nine times in cat language!",
+  "quirk.toneko.crystal_neko.attack.critical.4": "§aReincarnation contract sealed with a paw print in the next life!",
+  "quirk.toneko.crystal_neko.attack.dead.0": "§aGood job, Master! Victory achieved nya~",
+  "quirk.toneko.crystal_neko.attack.dead.1": "§aEnemy inheritance? Convert it all to cat food futures!",
+  "quirk.toneko.crystal_neko.attack.dead.2": "§aAfter victory... I'll let you rub my belly for three seconds!",
+  "quirk.toneko.crystal_neko.attack.dead.3": "§aVictory report? Use paw pad ink to write it!",
+  "quirk.toneko.crystal_neko.attack.dead.4": "§aEpic history: \"That day he wore my collar\"",
+  "quirk.toneko.zako": "zako",
+  "quirk.toneko.zako.des": "♡zako zako～♡",
+  "quirk.toneko.zako.damage.critical.0": "§cOh no, you can't even protect yourself? How pathetic!",
+  "quirk.toneko.zako.damage.critical.1": "§cBody stiffening? Use it as a test for my new pillow!",
+  "quirk.toneko.zako.damage.critical.2": "§cUse your body heat to warm my feet~ If cold, throw you in the trash!",
+  "quirk.toneko.zako.damage.critical.3": "§cZako's flatline heart rate~ perfect rhythm for my new song!",
+  "quirk.toneko.zako.damage.critical.4": "§cBrain slices as specimens~ say good morning to you every day, zako~",
+  "quirk.toneko.zako.damage.low.0": "§cInjured, little zako?",
+  "quirk.toneko.zako.damage.low.1": "§cYou messed up? So pathetic, zako!",
+  "quirk.toneko.zako.damage.low.2": "§cYour reaction is pure newbie, zako!",
+  "quirk.toneko.zako.damage.low.3": "§cThat move was terrible! Classic zako!",
+  "quirk.toneko.zako.damage.low.4": "§cStupid Master~ Can't even protect yourself? I'm embarrassed for you nya~",
+  "quirk.toneko.zako.damage.medium.0": "§cHurt, little zako?",
+  "quirk.toneko.zako.damage.medium.1": "§cDoes it hurt enough to cry? Hmm?",
+  "quirk.toneko.zako.damage.medium.2": "§cZako's health bar~ my new desktop decoration!",
+  "quirk.toneko.zako.damage.medium.3": "§cBut it's fun~ you're so cute when you're stupid!",
+  "quirk.toneko.zako.damage.medium.4": "§cZako's DNA must say \"Step on me\"!",
+  "quirk.toneko.zako.damage.high.0": "§cOh no, you hurt yourself so badly~ classic zako!",
+  "quirk.toneko.zako.damage.high.1": "§cWounds like burnt waffles~ need my sugar powder?",
+  "quirk.toneko.zako.damage.high.2": "§cZako's ECG is messier than my homework doodles!",
+  "quirk.toneko.zako.damage.high.3": "§cZako's heartbeat~ new ASMR material for me♡",
+  "quirk.toneko.zako.damage.high.4": "§cMy saliva can stop bleeding? But only for good doggos~",
+  "quirk.toneko.zako.join.0": "§cLook who's here~ little zako!",
+  "quirk.toneko.zako.join.1": "§cPlaying with others secretly? Found by me~ become my permanent collection!",
+  "quirk.toneko.zako.join.2": "§cZako smell on my roses! Go soak in disinfectant!",
+  "quirk.toneko.zako.join.3": "§cWelcome to my garbage dump~ backup food #10086!",
+  "quirk.toneko.zako.join.4": "§cZako's aura is weaker than my axolotl's eye roll!",
+  "quirk.toneko.zako.attack.high.0": "§cCan you win, zako?",
+  "quirk.toneko.zako.attack.high.1": "§cZako's punches~ like scratching an itch!",
+  "quirk.toneko.zako.attack.high.2": "§cThis damage? Ants laugh at you!",
+  "quirk.toneko.zako.attack.high.3": "§cBlade rusty~ sharpen with tears?",
+  "quirk.toneko.zako.attack.high.4": "§cRecord attack data? All zeros!",
+  "quirk.toneko.zako.attack.medium.0": "§cZako finally drew blood~ reward with a Band-Aid sticker?",
+  "quirk.toneko.zako.attack.medium.1": "§cAttack recoil made you fall~ so cute!",
+  "quirk.toneko.zako.attack.medium.2": "§cZako's crit~ like a damp firecracker!",
+  "quirk.toneko.zako.attack.medium.3": "§cSword hilt shaking? Hand broken? Good try!",
+  "quirk.toneko.zako.attack.medium.4": "§cBlood on weapon~ like ketchup on apron!",
+  "quirk.toneko.zako.attack.low.0": "§cLook at you, little zako~",
+  "quirk.toneko.zako.attack.low.1": "§cPenetration wound~ zako human flute?",
+  "quirk.toneko.zako.attack.low.2": "§cLast stand? Finally some value!",
+  "quirk.toneko.zako.attack.low.3": "§cThis blood loss~ like practicing butchery!",
+  "quirk.toneko.zako.attack.low.4": "§cBone-breaking sound~ like biting chocolate!",
+  "quirk.toneko.zako.attack.critical.0": "§cOh no, you actually succeeded?",
+  "quirk.toneko.zako.attack.critical.1": "§cZako landed a critical hit~ last moment of glory?",
+  "quirk.toneko.zako.attack.critical.2": "§cShockwave shattered eyes~ world in red filter!",
+  "quirk.toneko.zako.attack.critical.3": "§cHeart pierced but still moving~ like squashed tomato!",
+  "quirk.toneko.zako.attack.critical.4": "§cSword in heart~ zako's flag!",
+  "quirk.toneko.zako.attack.dead.0": "§cGood job, zako~",
+  "quirk.toneko.zako.attack.dead.1": "§cZako's deadly strike~ like a confession!",
+  "quirk.toneko.zako.attack.dead.2": "§cZako's blood everywhere~ my compost!",
+  "quirk.toneko.zako.attack.dead.3": "§cNext time... use your sad zako attacks to entertain me~♡",
+  "quirk.toneko.zako.attack.dead.4": "§cRandom win? Hmph~ did I underestimate you?",
   "moe.toneko.tsundere": "tsundere",
   "moe.toneko.baka": "baka",
   "moe.toneko.mesugaki": "mesugaki",
