--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -29,28 +29,108 @@
   "quirk.toneko.caress.be_used": "§d你被 %s §d轻轻地抚摸了一下喵~",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "欸？你事对猫猫有想法喵？",
-  "quirk.toneko.crystal_neko.damage.critical": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
-  "quirk.toneko.crystal_neko.damage.low": "§a没大碍吧，主人喵？",
-  "quirk.toneko.crystal_neko.damage.medium": "§a主人觉得疼吗喵～",
-  "quirk.toneko.crystal_neko.damage.high": "§a哇哇哇，主人很疼吧，要小心点喵～",
-  "quirk.toneko.crystal_neko.join": "§a酱酱～欢迎加入喵～",
-  "quirk.toneko.crystal_neko.attack.high": "§a战斗吧，主人，我相信你可以胜利的喵～",
-  "quirk.toneko.crystal_neko.attack.medium": "§a加油哦，你已经很努力地战斗了喵～",
-  "quirk.toneko.crystal_neko.attack.low": "§a好耶，距离胜利不远了喵～",
-  "quirk.toneko.crystal_neko.attack.critical": "§a再加把劲，胜利就在前方～",
-  "quirk.toneko.crystal_neko.attack.dead": "§a好耶，成功战胜了喵～",
+  "quirk.toneko.crystal_neko.damage.critical.0": "§a诶呀，主人，你的血量很低了喵～要尽快补充哦～",
+  "quirk.toneko.crystal_neko.damage.critical.1": "§a灵魂飘走就用猫语喊你回来",
+  "quirk.toneko.crystal_neko.damage.critical.2": "§a呼吸节奏要和呼噜声同步哦",
+  "quirk.toneko.crystal_neko.damage.critical.3": "§a主人别怕，喵来陪你",
+  "quirk.toneko.crystal_neko.damage.critical.4": "§a一定要好起来呀～ 喵会一直陪着你的",
+  "quirk.toneko.crystal_neko.damage.low.0": "§a没大碍吧，主人喵？",
+  "quirk.toneko.crystal_neko.damage.low.1": "§a才、才没担心你呢，笨蛋",
+  "quirk.toneko.crystal_neko.damage.low.2": "§a哼，这点小伤别大惊小怪",
+  "quirk.toneko.crystal_neko.damage.low.3": "§a摔跤的样子...勉强算可爱啦",
+  "quirk.toneko.crystal_neko.damage.low.4": "§a都说了走路要小心点吧?",
+  "quirk.toneko.crystal_neko.damage.medium.0": "§a主人觉得疼吗喵～",
+  "quirk.toneko.crystal_neko.damage.medium.1": "§a我的尾巴借你五分钟",
+  "quirk.toneko.crystal_neko.damage.medium.2": "§a现在知道求我陪你了?",
+  "quirk.toneko.crystal_neko.damage.medium.3": "§a血都蹭脏地毯了…快去处理！",
+  "quirk.toneko.crystal_neko.damage.medium.4": "§a看在你努力的份上多蹭蹭你",
+  "quirk.toneko.crystal_neko.damage.high.0": "§a哇哇哇，主人很疼吧，要小心点喵～",
+  "quirk.toneko.crystal_neko.damage.high.1": "§a绝对会好起来，这是猫的预言",
+  "quirk.toneko.crystal_neko.damage.high.2": "§a樱花开了...等你去看呢",
+  "quirk.toneko.crystal_neko.damage.high.3": "§a治疗成功给你看肉球印章哦",
+  "quirk.toneko.crystal_neko.damage.high.4": "§a病房太冷就躲进我的毛毛里",
+  "quirk.toneko.crystal_neko.join.0": "§a酱酱～欢迎加入喵～",
+  "quirk.toneko.crystal_neko.join.1": "§a新窝有奇怪味道…用体温烘一下",
+  "quirk.toneko.crystal_neko.join.2": "§a宇宙第一的铲屎官认证章盖好啦",
+  "quirk.toneko.crystal_neko.join.3": "§a纸箱基地分你一半...才不是特别优待！",
+  "quirk.toneko.crystal_neko.join.4": "§a梳毛服务预约排到...唔今天刚好空档！",
+  "quirk.toneko.crystal_neko.attack.high.0": "§a战斗吧，主人，我相信你可以胜利的喵～",
+  "quirk.toneko.crystal_neko.attack.high.1": "§a热身运动要做满三小时哦笨蛋",
+  "quirk.toneko.crystal_neko.attack.high.2": "§a再放水就派你去铲三天猫砂",
+  "quirk.toneko.crystal_neko.attack.high.3": "§a敌方破绽比我打翻的水杯还多",
+  "quirk.toneko.crystal_neko.attack.high.4": "§a这种程度连罐头都撬不开啦",
+  "quirk.toneko.crystal_neko.attack.medium.0": "§a加油哦，你已经很努力地战斗了喵～",
+  "quirk.toneko.crystal_neko.attack.medium.1": "§a血溅到三米外就奖励梳毛服务",
+  "quirk.toneko.crystal_neko.attack.medium.2": "§a呼吸节奏参考我的呼噜声频率",
+  "quirk.toneko.crystal_neko.attack.medium.3": "§a补刀前记得摆我教的胜利pose",
+  "quirk.toneko.crystal_neko.attack.medium.4": "§a敌方惨叫比破锣铃铛还难听",
+  "quirk.toneko.crystal_neko.attack.low.0": "§a好耶，距离胜利不远了喵～",
+  "quirk.toneko.crystal_neko.attack.low.1": "§a断刃插的位置…勉强给及格分",
+  "quirk.toneko.crystal_neko.attack.low.2": "§a敢战损超10%就断你小鱼干供应",
+  "quirk.toneko.crystal_neko.attack.low.3": "§a最后一击必须踩出樱花状血迹",
+  "quirk.toneko.crystal_neko.attack.low.4": "§a敌将求饶声录下来当催眠曲吧好耶，距离胜利不远了喵～",
+  "quirk.toneko.crystal_neko.attack.critical.0": "§a再加把劲，胜利就在前方～",
+  "quirk.toneko.crystal_neko.attack.critical.1": "§a自爆倒计时像追尾巴转圈速度",
+  "quirk.toneko.crystal_neko.attack.critical.2": "§a能量过载时想象在抓沙发！",
+  "quirk.toneko.crystal_neko.attack.critical.3": "§a灵魂出窍前用猫语喊九次名字",
+  "quirk.toneko.crystal_neko.attack.critical.4": "§a转世契约盖爪印在下辈子第三月",
+  "quirk.toneko.crystal_neko.attack.dead.0": "§a好耶，成功战胜了喵～",
+  "quirk.toneko.crystal_neko.attack.dead.1": "§a敌方遗产全部换算成猫条期货",
+  "quirk.toneko.crystal_neko.attack.dead.2": "§a凯旋后…勉强允许你吸肚皮三秒",
+  "quirk.toneko.crystal_neko.attack.dead.3": "§a胜利报告要用肉球墨水书写",
+  "quirk.toneko.crystal_neko.attack.dead.4": "§a史诗记载「那日他戴着我的领结」",
   "quirk.toneko.zako": "杂鱼",
   "quirk.toneko.zako.des": "♡杂鱼杂鱼～♡",
-  "quirk.toneko.zako.damage.critical": "§c诶呀，你怎么连自己都保护不好呀，也太菜了吧～",
-  "quirk.toneko.zako.damage.low": "§c受伤了吧，小杂鱼～",
-  "quirk.toneko.zako.damage.medium": "§c疼了吧，小杂鱼～",
-  "quirk.toneko.zako.damage.high": "§c诶呀，一不小心让自己受到这么大的伤害，可真是个杂鱼呢～",
-  "quirk.toneko.zako.join": "§c这不是小杂鱼吗～你怎么来了呀",
-  "quirk.toneko.zako.attack.high": "§c你打得过吗，杂鱼～",
-  "quirk.toneko.zako.attack.medium": "§c半天才打掉这点血量，你怎么这么菜呀～",
-  "quirk.toneko.zako.attack.low": "§c看起来你还挺厉害的嘛，小杂鱼～",
-  "quirk.toneko.zako.attack.critical": "§c诶呀，你居然要成功了？",
-  "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厉害～",
+  "quirk.toneko.zako.damage.critical.0": "§c诶呀，你怎么连自己都保护不好呀，也太菜了吧～",
+  "quirk.toneko.zako.damage.critical.1": "§c尸体僵硬前…先当喵的等身抱枕试用装呀！",
+  "quirk.toneko.zako.damage.critical.2": "§c残余体温给喵暖脚～凉透就丢进不可回收垃圾～",
+  "quirk.toneko.zako.damage.critical.3": "§c杂鱼的心电图归零～刚好给喵的新歌打节奏！",
+  "quirk.toneko.zako.damage.critical.4": "§c大脑切片做成标本～每天对你说早安哦～杂鱼～",
+  "quirk.toneko.zako.damage.low.0": "§c受伤了吧，小杂鱼～",
+  "quirk.toneko.zako.damage.low.1": "§c你这都能搞砸，真是超让人哭笑不得嘛，杂鱼！",
+  "quirk.toneko.zako.damage.low.2": "§c你这反应，简直是新手的典范呢，杂鱼！",
+  "quirk.toneko.zako.damage.low.3": "§c这操作也太烂了吧，不愧是你呢，杂鱼♡",
+  "quirk.toneko.zako.damage.low.4": "§c笨蛋主人～连自己都保护不好吗？喵都替你丢脸喵～",
+  "quirk.toneko.zako.damage.medium.0": "§c疼了吧，小杂鱼～",
+  "quirk.toneko.zako.damage.medium.1": "§c哎呀～不会痛到想叫妈妈吧？",
+  "quirk.toneko.zako.damage.medium.2": "§c杂鱼的生命值条…是喵的进度条装饰品吗？",
+  "quirk.toneko.zako.damage.medium.3": "§c不过也挺有趣的，毕竟笨蛋才会这么可爱",
+  "quirk.toneko.zako.damage.medium.4": "§c杂鱼的DNA里绝对写着「快来踩我」对吧？",
+  "quirk.toneko.zako.damage.high.0": "§c诶呀，一不小心让自己受到这么大的伤害，可真是个杂鱼呢～",
+  "quirk.toneko.zako.damage.high.1": "§c伤口结痂像烤焦的华夫饼～要撒点喵的糖粉吗？",
+  "quirk.toneko.zako.damage.high.2": "§c杂鱼的心电图比喵的作业本涂鸦还乱～重画一百遍！",
+  "quirk.toneko.zako.damage.high.3": "§c杂鱼的心跳声…是喵的ASMR新素材呢♡",
+  "quirk.toneko.zako.damage.high.4": "§c喵的唾液能止血？但只给听话的狗狗用哦～",
+  "quirk.toneko.zako.join.0": "§c这不是小杂鱼吗～你怎么来了呀",
+  "quirk.toneko.zako.join.1": "§c偷偷和别人玩被喵发现了的话～把你变成喵的永久收藏品哦～",
+  "quirk.toneko.zako.join.2": "§c杂鱼臭味熏到喵的蔷薇花啦！滚去泡消毒液～",
+  "quirk.toneko.zako.join.3": "§c欢迎来到喵的垃圾回收站～第10086号备用粮！",
+  "quirk.toneko.zako.join.4": "§c杂鱼的气场弱到喵的美西螈都翻白眼啦～",
+  "quirk.toneko.zako.attack.high.0": "§c你打得过吗，杂鱼～",
+  "quirk.toneko.zako.attack.high.1": "§c杂鱼的拳头在挠痒吗？蚊子都比你努力哟",
+  "quirk.toneko.zako.attack.high.2": "§c这种伤害值~连蚂蚁都会笑到脱臼啦",
+  "quirk.toneko.zako.attack.high.3": "§c杂鱼的刀锋生锈啦~用眼泪磨一磨？",
+  "quirk.toneko.zako.attack.high.4": "§c要记录攻击数据吗？仪器显示全是零哦",
+  "quirk.toneko.zako.attack.medium.0": "§c杂鱼终于划破表皮了呢~奖励创可贴邮票？",
+  "quirk.toneko.zako.attack.medium.1": "§c攻击后坐力让杂鱼自己摔倒了呢~超绝可爱！",
+  "quirk.toneko.zako.attack.medium.2": "§c杂鱼的暴击像受潮哑炮~闷响好下饭",
+  "quirk.toneko.zako.attack.medium.3": "§c剑柄震得杂鱼手骨裂了吧？真努力呢~",
+  "quirk.toneko.zako.attack.medium.4": "§c武器沾到血了哟~像番茄酱滴在围裙上",
+  "quirk.toneko.zako.attack.low.0": "§c看起来你还挺厉害的嘛，小杂鱼～",
+  "quirk.toneko.zako.attack.low.1": "§c贯穿伤在漏风哦~要当杂鱼的人体笛子吗？",
+  "quirk.toneko.zako.attack.low.2": "§c濒死反击？杂鱼终于有点玩具价值了呢",
+  "quirk.toneko.zako.attack.low.3": "§c这个出血量...杂鱼偷偷练习过宰猪吗？",
+  "quirk.toneko.zako.attack.low.4": "§c砍进骨头的声音~像咬碎夹心巧克力对吧？",
+  "quirk.toneko.zako.attack.critical.0": "§c诶呀，你居然要成功了？",
+  "quirk.toneko.zako.attack.critical.1": "§c杂鱼打出会心一击了呢~是死前的回光返照吗？",
+  "quirk.toneko.zako.attack.critical.2": "§c冲击波震碎眼膜了~世界变成血红滤镜哟",
+  "quirk.toneko.zako.attack.critical.3": "§c心脏被刺穿还在动~像捏烂的番茄在抽搐",
+  "quirk.toneko.zako.attack.critical.4": "§c剑插着心脏举高高~杂鱼版人体旗帜呢",
+  "quirk.toneko.zako.attack.dead.0": "§a好叭好叭，算你厉害～",
+  "quirk.toneko.zako.attack.dead.1": "§a杂鱼颤抖的致命一击...像告白的力度呢",
+  "quirk.toneko.zako.attack.dead.2": "§a杂鱼的血肉开花啦~是我专属的腐殖质哦",
+  "quirk.toneko.zako.attack.dead.3": "§a下次进攻时...请继续用杂鱼的可悲攻击取悦我吧~♡",
+  "quirk.toneko.zako.attack.dead.4": "§a偶然的胜利吗？哼~ 是我低估了你的实力吗？",
   "moe.toneko.tsundere": "傲娇",
   "moe.toneko.baka": "笨蛋",
   "moe.toneko.mesugaki": "雌小鬼",
