--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -29,28 +29,107 @@
   "quirk.toneko.caress.be_used": "§d你被 %s §d輕輕地撫摸了一下喵～",
   "quirk.toneko.crystal_neko": "Crystal_Neko",
   "quirk.toneko.crystal_neko.des": "欸？你對貓貓有想法？",
-  "quirk.toneko.crystal_neko.damage.critical": "§a哎呀，主人，你的血量很低了喵～要盡快補充哦～",
-  "quirk.toneko.crystal_neko.damage.low": "§a沒大礙吧，主人喵？",
-  "quirk.toneko.crystal_neko.damage.medium": "§a主人覺得疼嗎喵～",
-  "quirk.toneko.crystal_neko.damage.high": "§a哇哇哇，主人很疼吧，要小心點喵～",
-  "quirk.toneko.crystal_neko.join": "§a醬醬～歡迎加入喵～",
-  "quirk.toneko.crystal_neko.attack.high": "§a戰鬥吧，主人，我相信你可以勝利的喵～",
-  "quirk.toneko.crystal_neko.attack.medium": "§a加油哦，你已經很努力地戰鬥了喵～",
-  "quirk.toneko.crystal_neko.attack.low": "§a好耶，距離勝利不遠了喵～",
-  "quirk.toneko.crystal_neko.attack.critical": "§a再加把勁，勝利就在前方～",
-  "quirk.toneko.crystal_neko.attack.dead": "§a好耶，成功戰勝了喵～",
-  "quirk.toneko.zako": "雜魚",
-  "quirk.toneko.zako.des": "♡雜魚雜魚～♡",
-  "quirk.toneko.zako.damage.critical": "§c哎呀，你怎麼連自己都保護不好呀，也太菜了吧～",
-  "quirk.toneko.zako.damage.low": "§c受傷了吧，小雜魚～",
-  "quirk.toneko.zako.damage.medium": "§c疼了吧，小雜魚～",
-  "quirk.toneko.zako.damage.high": "§c哎呀，一不小心讓自己受到這麼大的傷害，可真是個雜魚呢～",
-  "quirk.toneko.zako.join": "§c這不是小雜魚嗎～你怎麼來了呀",
-  "quirk.toneko.zako.attack.high": "§c你打得過嗎，雜魚～",
-  "quirk.toneko.zako.attack.medium": "§c半天才打掉這點血量，你怎麼這麼菜呀～",
-  "quirk.toneko.zako.attack.low": "§c看起來你還挺厲害的嘛，小雜魚～",
-  "quirk.toneko.zako.attack.critical": "§c哎呀，你居然要成功了？",
-  "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厲害～",
+  "quirk.toneko.crystal_neko.damage.critical.0": "§a唉呀，主人，你的血量很低喵～要趕快補充哦～",
+  "quirk.toneko.crystal_neko.damage.critical.1": "§a靈魂飄走就用猫語喊你回來",
+  "quirk.toneko.crystal_neko.damage.critical.2": "§a呼吸節奏要和呼噜聲同步哦",
+  "quirk.toneko.crystal_neko.damage.critical.3": "§a主人別怕，喵來陪你",
+  "quirk.toneko.crystal_neko.damage.critical.4": "§a一定要好起來呀～喵會一直陪着你的",
+  "quirk.toneko.crystal_neko.damage.low.0": "§a没大碍吧，主人喵？",
+  "quirk.toneko.crystal_neko.damage.low.1": "§a才、才没擔心你呢，笨蛋",
+  "quirk.toneko.crystal_neko.damage.low.2": "§a嘔，這點小傷别大驚小怪",
+  "quirk.toneko.crystal_neko.damage.low.3": "§a摔跤的样子...勉强算可爱啦",
+  "quirk.toneko.crystal_neko.damage.low.4": "§a都說了走路要小心點吧？",
+  "quirk.toneko.crystal_neko.damage.medium.0": "§a主人覺得疼嗎喵～",
+  "quirk.toneko.crystal_neko.damage.medium.1": "§a我的尾巴借你五分鐘",
+  "quirk.toneko.crystal_neko.damage.medium.2": "§a現在知道求我陪你了？",
+  "quirk.toneko.crystal_neko.damage.medium.3": "§a血都蹭脏地毯了…快去處理！",
+  "quirk.toneko.crystal_neko.damage.medium.4": "§a看在你努力的份上多蹭蹭你",
+  "quirk.toneko.crystal_neko.damage.high.0": "§a哇哇哇，主人很疼吧，要小心點喵～",
+  "quirk.toneko.crystal_neko.damage.high.1": "§a絕對會好起來，這是猫的預言",
+  "quirk.toneko.crystal_neko.damage.high.2": "§a櫻花開了...等你去看呢",
+  "quirk.toneko.crystal_neko.damage.high.3": "§a治療成功給你看肉球印章哦",
+  "quirk.toneko.crystal_neko.damage.high.4": "§a病房太冷就躲進我的毛毛裡",
+  "quirk.toneko.crystal_neko.join.0": "§a醬醬～歡迎加入喵～",
+  "quirk.toneko.crystal_neko.join.1": "§a宇宙第一的鏟屎認證章蓋好啦",
+  "quirk.toneko.crystal_neko.join.2": "§a紙箱基地分你一半...才不是特別優待！",
+  "quirk.toneko.crystal_neko.join.3": "§a梳毛服務預約排到...唔今天剛好空檔！",
+  "quirk.toneko.crystal_neko.attack.high.0": "§a戰鬥吧，主人，我相信你可以勝利的喵～",
+  "quirk.toneko.crystal_neko.attack.high.1": "§a熱身運動要做滿三小時哦笨蛋",
+  "quirk.toneko.crystal_neko.attack.high.2": "§a再放水就派你去鏟三天猫砂",
+  "quirk.toneko.crystal_neko.attack.high.3": "§a敵方破綻比我打翻的水杯還多",
+  "quirk.toneko.crystal_neko.attack.high.4": "§a這種程度連罐頭都撬不開啦",
+  "quirk.toneko.crystal_neko.attack.medium.0": "§a加油哦，你已经很努力地戰鬥了喵～",
+  "quirk.toneko.crystal_neko.attack.medium.1": "§a血濺到三米外就獎勵梳毛服務",
+  "quirk.toneko.crystal_neko.attack.medium.2": "§a呼吸節奏參考我的呼噜聲頻率",
+  "quirk.toneko.crystal_neko.attack.medium.3": "§a補刀前記得擺我教的勝利pose",
+  "quirk.toneko.crystal_neko.attack.medium.4": "§a敵方慘叫比破鍾鑼錘還難聽",
+  "quirk.toneko.crystal_neko.attack.low.0": "§a好耶，距離勝利不遠了喵～",
+  "quirk.toneko.crystal_neko.attack.low.1": "§a斷刃插的位置…勉強給及格分",
+  "quirk.toneko.crystal_neko.attack.low.2": "§a敢戰損超10%就斷你小魚干供應",
+  "quirk.toneko.crystal_neko.attack.low.3": "§a最後一擊必须踩出櫻花狀血跡",
+  "quirk.toneko.crystal_neko.attack.low.4": "§a敵將求饒聲錄下來當催眠曲吧好耶，距離勝利不遠了喵～",
+  "quirk.toneko.crystal_neko.attack.critical.0": "§a再加把劲，勝利就在前方～",
+  "quirk.toneko.crystal_neko.attack.critical.1": "§a自爆倒計時像追尾巴轉圈速度",
+  "quirk.toneko.crystal_neko.attack.critical.2": "§a能量過載時想象在抓沙發！",
+  "quirk.toneko.crystal_neko.attack.critical.3": "§a靈魂出竅前用猫語喊九次名字",
+  "quirk.toneko.crystal_neko.attack.critical.4": "§a轉世契約蓋爪印在下輩子第三月",
+  "quirk.toneko.crystal_neko.attack.dead.0": "§a好耶，成功戰勝了喵～",
+  "quirk.toneko.crystal_neko.attack.dead.1": "§a敵方遺產全部換算成猫條期貨",
+  "quirk.toneko.crystal_neko.attack.dead.2": "§a凱旋後…勉強允許你吸肚皮三秒",
+  "quirk.toneko.crystal_neko.attack.dead.3": "§a勝利報告要用肉球墨水書寫",
+  "quirk.toneko.crystal_neko.attack.dead.4": "§a史詩記載「那日他戴着我的領結」",
+  "quirk.toneko.zako": "雑魚",
+  "quirk.toneko.zako.des": "♡雑魚雑魚～♡",
+  "quirk.toneko.zako.damage.critical.0": "§c誒呀，你怎麼連自己都保護不起呀，也太菜了吧～",
+  "quirk.toneko.zako.damage.critical.1": "§c屍體硬直前…先當喵的等身抱枕試用裝呀！",
+  "quirk.toneko.zako.damage.critical.2": "§c殘餘體溫給喵暖腳～涼透就丟進不可回收垃圾～",
+  "quirk.toneko.zako.damage.critical.3": "§c雑魚的心電圖歸零～剛好給喵的新歌打節奏！",
+  "quirk.toneko.zako.damage.critical.4": "§c大腦切片做成標本～每天對你說早安哦～雑魚～",
+  "quirk.toneko.zako.damage.low.0": "§c受傷了吧，小雑魚～",
+  "quirk.toneko.zako.damage.low.1": "§c你這個都搞砍，真是超讓人哭笑不得嘛，雑魚！",
+  "quirk.toneko.zako.damage.low.2": "§c你這個反應，簡直是新手的典範呢，雑魚！",
+  "quirk.toneko.zako.damage.low.3": "§c這操作也太爛了吧，不愧是你呢，雑魚♡",
+  "quirk.toneko.zako.damage.low.4": "§c笨蛋主人～連自己都保護不好嗎？喵都替你丟臉喵～",
+  "quirk.toneko.zako.damage.medium.0": "§c疼了吧，小雑魚～",
+  "quirk.toneko.zako.damage.medium.1": "§c噢噢～不會痛到想叫媽媽吧？",
+  "quirk.toneko.zako.damage.medium.2": "§c雑魚的生命值條…是喵的進度條裝飾品嗎？",
+  "quirk.toneko.zako.damage.medium.3": "§c不過也挺有趣的，畢竟笨蛋才會這麼可愛",
+  "quirk.toneko.zako.damage.medium.4": "§c雑魚的DNA裡絕對寫着「快來踩我」對吧？",
+  "quirk.toneko.zako.damage.high.0": "§c誒呀，一不小心讓自己受到這麼大的傷害，可真是個雑魚呢～",
+  "quirk.toneko.zako.damage.high.1": "§c傷口結痂像烤焦的華夫餅～要撒點喵的糖粉嗎？",
+  "quirk.toneko.zako.damage.high.2": "§c雑魚的心電圖比喵的作業本涂鴉還亂～重畫一百遍！",
+  "quirk.toneko.zako.damage.high.3": "§c雑魚的心跳聲…是喵的ASMR新素材呢♡",
+  "quirk.toneko.zako.damage.high.4": "§c喵的唾液能止血？但只給聽話的狗狗用哦～",
+  "quirk.toneko.zako.join.0": "§c這不是小雑魚嗎～你怎麼來了呀",
+  "quirk.toneko.zako.join.1": "§c偷偷和別人玩被喵發現了的话～把你變成喵的永久收藏品哦～",
+  "quirk.toneko.zako.join.2": "§c雑魚臭味熏到喵的蔷薇花啦！滾去泡消毒液～",
+  "quirk.toneko.zako.join.3": "§c歡迎來到喵的垃圾回收站～第10086號備用糧！",
+  "quirk.toneko.zako.join.4": "§c雑魚的氣場弱到喵的美西螈都翻白眼啦～",
+  "quirk.toneko.zako.attack.high.0": "§c你打得過嗎，雑魚～",
+  "quirk.toneko.zako.attack.high.1": "§c雑魚的拳頭在挠癢嗎？蒼蟲都比你努力呀",
+  "quirk.toneko.zako.attack.high.2": "§c這種傷害值~連螞蟻都會笑到脫臼啦",
+  "quirk.toneko.zako.attack.high.3": "§c雑魚的刀鋒生鏽啦~用眼淚磨一磨？",
+  "quirk.toneko.zako.attack.high.4": "§c要紀錄攻擊數據嗎？儀器顯示全是零哦",
+  "quirk.toneko.zako.attack.medium.0": "§c雑魚終於劃破表皮了呢~獎勵創可貼郵票？",
+  "quirk.toneko.zako.attack.medium.1": "§c攻擊後坐力讓雑魚自己摔倒了呢~超絕可愛！",
+  "quirk.toneko.zako.attack.medium.2": "§c雑魚的暴擊像受潮哑炮~悶響好下飯",
+  "quirk.toneko.zako.attack.medium.3": "§c劍柄震得雑魚手骨裂了吧？真努力呢~",
+  "quirk.toneko.zako.attack.medium.4": "§c武器沾到血了哟~像番茄酱滴在圍裙上",
+  "quirk.toneko.zako.attack.low.0": "§c看起來你還挺厲害的嘛，小雑魚～",
+  "quirk.toneko.zako.attack.low.1": "§c貫穿傷在漏風哦~要當人體笛子嗎？",
+  "quirk.toneko.zako.attack.low.2": "§c瀕死反擊？雑魚終於有点玩具價值了呢",
+  "quirk.toneko.zako.attack.low.3": "§c這個出血量...雑魚偷偷練習過宰豬嗎？",
+  "quirk.toneko.zako.attack.low.4": "§c砍進骨頭的声音~像咬碎夾心巧克力對吧？",
+  "quirk.toneko.zako.attack.critical.0": "§c誒呀，你居然要成功了？",
+  "quirk.toneko.zako.attack.critical.1": "§c雑魚打出會心一擊了呢~是死前的回光返照嗎？",
+  "quirk.toneko.zako.attack.critical.2": "§c衝擊波震碎眼膜了~世界變成血紅濾鏡囉",
+  "quirk.toneko.zako.attack.critical.3": "§c心臟被刺穿還在動~像捏爛的番茄在抽搐",
+  "quirk.toneko.zako.attack.critical.4": "§c劍插着心臟舉高高~雑魚版人體旗幟呢",
+  "quirk.toneko.zako.attack.dead.0": "§a好叭好叭，算你厲害～",
+  "quirk.toneko.zako.attack.dead.1": "§c雑魚的颤抖致命一擊...像告白的力度呢",
+  "quirk.toneko.zako.attack.dead.2": "§c雑魚的血肉開花啦~是我專屬的腐殖質哦",
+  "quirk.toneko.zako.attack.dead.3": "§c下次進攻時...請繼續用雑魚的可悲攻擊取悦我吧~♡",
+  "quirk.toneko.zako.attack.dead.4": "§c偶然的勝利嗎？唼~ 是我低估了你的實力嗎？",
   "moe.toneko.tsundere": "傲娇",
   "moe.toneko.baka": "笨蛋",
   "moe.toneko.mesugaki": "雌小鬼",
