添加更多文案

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -208,6 +208,31 @@
   "message.toneko.neko.on_hurt.3": "§e%s §d>> §fYou... were careless?",
   "message.toneko.neko.on_hurt.4": "§e%s §d>> §fYou... You are so bad!",
   "message.toneko.neko.on_hurt.5": "§e%s §d>> §fBig bad!",
+  "message.toneko.neko.on_hurt.mesugaki.0": "§e%s §d>> §cYou big idiot, that's unforgivable!",
+  "message.toneko.neko.on_hurt.mesugaki.1": "§e%s §d>> §cAre you trying to make me angrier? Fine, keep going!",
+  "message.toneko.neko.on_hurt.mesugaki.2": "§e%s §d>> §cWho do you think you are? I can do whatever I want to you, zako~",
+  "message.toneko.neko.on_hurt.mesugaki.3": "§e%s §d>> §cYou think I'd be afraid of you? How naive!",
+  "message.toneko.neko.on_hurt.mesugaki.4": "§e%s §d>> §cHow dare you hurt me! You'll regret this!",
+  "message.toneko.neko.on_hurt.yandere.0": "§e%s §d>> §dI'll be nicer to you next time if you hurt me once.",
+  "message.toneko.neko.on_hurt.yandere.1": "§e%s §d>> §dI just want to be close to you, why would you hurt me?",
+  "message.toneko.neko.on_hurt.yandere.2": "§e%s §d>> §dYou hurt me, and I'll make sure you pay for it no matter what!",
+  "message.toneko.neko.on_hurt.yandere.3": "§e%s §d>> §dIf this makes you notice me, I'll endure anything.",
+  "message.toneko.neko.on_hurt.yandere.4": "§e%s §d>> §dAre you trying to make me completely fall apart?",
+  "message.toneko.neko.on_hurt.tsundere.0": "§e%s §d>> §6Don't get the wrong idea, pal!",
+  "message.toneko.neko.on_hurt.tsundere.1": "§e%s §d>> §6You think I'd cry? Don't be ridiculous!",
+  "message.toneko.neko.on_hurt.tsundere.2": "§e%s §d>> §6Who do you think you are to scare me? Please.",
+  "message.toneko.neko.on_hurt.tsundere.3": "§e%s §d>> §6I don't even care about you, so go ahead and hurt me!",
+  "message.toneko.neko.on_hurt.tsundere.4": "§e%s §d>> §6Does it hurt? Well, who cares!",
+  "message.toneko.neko.on_hurt.chunibyo.0": "§e%s §b>> §bI won't lose to you, you're not even close!",
+  "message.toneko.neko.on_hurt.chunibyo.1": "§e%s §b>> §bYou think you can defeat me? How naive!",
+  "message.toneko.neko.on_hurt.chunibyo.2": "§e%s §b>> §bHow dare you touch me! This is the biggest mistake of your life!",
+  "message.toneko.neko.on_hurt.chunibyo.3": "§e%s §b>> §bYou think I'd surrender? Never!",
+  "message.toneko.neko.on_hurt.chunibyo.4": "§e%s §b>> §bYou think I'd understand the truth of the world? Impossible!",
+  "message.toneko.neko.on_hurt.tennen_boke.0": "§e%s §b>> §aAre you not liking me anymore because of this?",
+  "message.toneko.neko.on_hurt.tennen_boke.1": "§e%s §b>> §aOh no, I think I did something wrong... I'm such an idiot...",
+  "message.toneko.neko.on_hurt.tennen_boke.2": "§e%s §b>> §aWaaah, I suddenly feel a little sad...",
+  "message.toneko.neko.on_hurt.tennen_boke.3": "§e%s §b>> §aOw, that hurts! Why did this happen?",
+  "message.toneko.neko.on_hurt.tennen_boke.4": "§e%s §b>> §aAre you upset with me? Did I do something wrong?",
   "message.toneko.neko.die.no_item_drop": "§cYou are so mean. I won't return the item to you. Humph!",
   "message.toneko.neko.mate.start": "%s will mate with %s, please wait~",
   "message.toneko.neko.mate.fail": "§c Seems failed...",
