--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -208,6 +208,31 @@
   "message.toneko.neko.on_hurt.3": "§e%s §d>> §f是...不小心的吧？",
   "message.toneko.neko.on_hurt.4": "§e%s §d>> §f你...你太坏了！",
   "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
+  "message.toneko.neko.on_hurt.mesugaki.0": "§e%s §d>> §c你这个大笨蛋，真是不可原谅！",
+  "message.toneko.neko.on_hurt.mesugaki.1": "§e%s §d>> §c你是不是想让我更生气啊？那就继续吧",
+  "message.toneko.neko.on_hurt.mesugaki.2": "§e%s §d>> §c你以为你是谁啊？我随时都能把你怎么样，杂鱼~",
+  "message.toneko.neko.on_hurt.mesugaki.3": "§e%s §d>> §c你是不是以为我会怕你？那你太幼稚了",
+  "message.toneko.neko.on_hurt.mesugaki.4": "§e%s §d>> §c你竟然敢伤害我，我会让你后悔的！",
+  "message.toneko.neko.on_hurt.yandere.0": "§e%s §d>> §d你伤害我一次，我会对你更好一次",
+  "message.toneko.neko.on_hurt.yandere.1": "§e%s §d>> §d我只想靠近你，为什么你要伤害我？",
+  "message.toneko.neko.on_hurt.yandere.2": "§e%s §d>> §d你敢伤害我，不管怎样我都会找回去的！",
+  "message.toneko.neko.on_hurt.yandere.3": "§e%s §d>> §d如果这能让你注意我，我愿意承受一切。",
+  "message.toneko.neko.on_hurt.yandere.4": "§e%s §d>> §d你是不是想让我彻底崩溃？",
+  "message.toneko.neko.on_hurt.tsundere.0": "§e%s §d>> §6你这家伙，不要自作多情！",
+  "message.toneko.neko.on_hurt.tsundere.1": "§e%s §d>> §6你以为我会哭吗？做梦！",
+  "message.toneko.neko.on_hurt.tsundere.2": "§e%s §d>> §6哼，谁会被你吓倒啊，真是的！",
+  "message.toneko.neko.on_hurt.tsundere.3": "§e%s §d>> §6我才不在乎你呢，伤害我也没关系！",
+  "message.toneko.neko.on_hurt.tsundere.4": "§e%s §d>> §6痛吗？哼，没什么了不起的！",
+  "message.toneko.neko.on_hurt.chunibyo.0": "§e%s §b>> §b我不会输给你的，你还差得远！",
+  "message.toneko.neko.on_hurt.chunibyo.1": "§e%s §b>> §b想要打败我，太天真了！",
+  "message.toneko.neko.on_hurt.chunibyo.2": "§e%s §b>> §b你怎么敢碰我！这是你一生的错误！",
+  "message.toneko.neko.on_hurt.chunibyo.3": "§e%s §b>> §b你想我屈服？那是永远也不可能的！",
+  "message.toneko.neko.on_hurt.chunibyo.4": "§e%s §b>> §b哼，你怎么可能理解，世界的真理！",
+  "message.toneko.neko.on_hurt.tennen_boke.0": "§e%s §b>> §a你这样对我，是不是不喜欢我了？",
+  "message.toneko.neko.on_hurt.tennen_boke.1": "§e%s §b>> §a哎呀，好像哪里做错了，我真是笨蛋...",
+  "message.toneko.neko.on_hurt.tennen_boke.2": "§e%s §b>> §a呜，怎么突然好像有点难过呢？",
+  "message.toneko.neko.on_hurt.tennen_boke.3": "§e%s §b>> §a啊，好痛，怎么会这样呢？",
+  "message.toneko.neko.on_hurt.tennen_boke.4": "§e%s §b>> §a你是不是不高兴了？是我做错了什么吗？",
   "message.toneko.neko.die.no_item_drop": "§c你太坏了，东西不还给你了，哼！",
   "message.toneko.neko.mate.start": "%s 将会与 %s 进行交配，请稍等~",
   "message.toneko.neko.mate.fail": "§c 好像失败了呢",
