--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -50,9 +50,10 @@
   "quirk.toneko.crystal_neko.damage.high.3": "§a治療成功給你看肉球印章哦",
   "quirk.toneko.crystal_neko.damage.high.4": "§a病房太冷就躲進我的毛毛裡",
   "quirk.toneko.crystal_neko.join.0": "§a醬醬～歡迎加入喵～",
-  "quirk.toneko.crystal_neko.join.1": "§a宇宙第一的鏟屎認證章蓋好啦",
-  "quirk.toneko.crystal_neko.join.2": "§a紙箱基地分你一半...才不是特別優待！",
-  "quirk.toneko.crystal_neko.join.3": "§a梳毛服務預約排到...唔今天剛好空檔！",
+  "quirk.toneko.crystal_neko.join.1": "§a新窝有奇怪味道…用体温烘一下",
+  "quirk.toneko.crystal_neko.join.2": "§a宇宙第一的鏟屎認證章蓋好啦",
+  "quirk.toneko.crystal_neko.join.3": "§a紙箱基地分你一半...才不是特別優待！",
+  "quirk.toneko.crystal_neko.join.4": "§a梳毛服務預約排到...唔今天剛好空檔！",
   "quirk.toneko.crystal_neko.attack.high.0": "§a戰鬥吧，主人，我相信你可以勝利的喵～",
   "quirk.toneko.crystal_neko.attack.high.1": "§a熱身運動要做滿三小時哦笨蛋",
   "quirk.toneko.crystal_neko.attack.high.2": "§a再放水就派你去鏟三天猫砂",
@@ -207,6 +208,31 @@
   "message.toneko.neko.on_hurt.3": "§e%s §d>> §f是...不小心的吧？",
   "message.toneko.neko.on_hurt.4": "§e%s §d>> §f你...你太坏了！",
   "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
+  "message.toneko.neko.on_hurt.mesugaki.0": "§e%s §d>> §c你這大笨蛋，真是不可原諒！",
+  "message.toneko.neko.on_hurt.mesugaki.1": "§e%s §d>> §c你是不是想讓我更生氣啊？那就繼續吧。",
+  "message.toneko.neko.on_hurt.mesugaki.2": "§e%s §d>> §c你以為你是誰啊？我隨時都能把你怎麼樣，zako~",
+  "message.toneko.neko.on_hurt.mesugaki.3": "§e%s §d>> §c你是不是以為我會怕你？那你太幼稚了。",
+  "message.toneko.neko.on_hurt.mesugaki.4": "§e%s §d>> §c你竟然敢傷害我，我會讓你後悔的！",
+  "message.toneko.neko.on_hurt.yandere.0": "§e%s §d>> §d你傷害我一次，我會對你更好一次。",
+  "message.toneko.neko.on_hurt.yandere.1": "§e%s §d>> §d我只想靠近你，為什麼你要傷害我？",
+  "message.toneko.neko.on_hurt.yandere.2": "§e%s §d>> §d你敢傷害我，不管怎麼樣我都會找回去的！",
+  "message.toneko.neko.on_hurt.yandere.3": "§e%s §d>> §d如果這能讓你注意我，我願意承受一切。",
+  "message.toneko.neko.on_hurt.yandere.4": "§e%s §d>> §d你是不是想讓我徹底崩潰？",
+  "message.toneko.neko.on_hurt.tsundere.0": "§e%s §d>> §6你這家伙，別自作多情！",
+  "message.toneko.neko.on_hurt.tsundere.1": "§e%s §d>> §6你以為我會哭嗎？做夢！",
+  "message.toneko.neko.on_hurt.tsundere.2": "§e%s §d>> §6嘿，誰會被你嚇到啊，真是的！",
+  "message.toneko.neko.on_hurt.tsundere.3": "§e%s §d>> §6我才不在乎你呢，傷害我也沒關係！",
+  "message.toneko.neko.on_hurt.tsundere.4": "§e%s §d>> §6痛嗎？嘿，沒什麼了不起的！",
+  "message.toneko.neko.on_hurt.chunibyo.0": "§e%s §b>> §b我不會輸給你的，你還差得遠！",
+  "message.toneko.neko.on_hurt.chunibyo.1": "§e%s §b>> §b想打敗我？太天真了！",
+  "message.toneko.neko.on_hurt.chunibyo.2": "§e%s §b>> §b你怎麼敢碰我！這是你一生的錯誤！",
+  "message.toneko.neko.on_hurt.chunibyo.3": "§e%s §b>> §b你想我屈服？那是永遠也不可能的！",
+  "message.toneko.neko.on_hurt.chunibyo.4": "§e%s §b>> §b你以為我會理解，世界的真理？不可能的！",
+  "message.toneko.neko.on_hurt.tennen_boke.0": "§e%s §b>> §a你這樣對我，是不是不喜歡我了？",
+  "message.toneko.neko.on_hurt.tennen_boke.1": "§e%s §b>> §a哎呀，好像哪裡做錯了，我真是笨蛋...",
+  "message.toneko.neko.on_hurt.tennen_boke.2": "§e%s §b>> §a呜，好像突然好像有點難過呢？",
+  "message.toneko.neko.on_hurt.tennen_boke.3": "§e%s §b>> §a啊，好痛，怎麼會這樣呢？",
+  "message.toneko.neko.on_hurt.tennen_boke.4": "§e%s §b>> §a你是不是不高興了？是我做錯了什麼嗎？",
   "message.toneko.neko.die.no_item_drop": "§c你太坏了，东西不还给你了，哼！",
   "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
   "message.toneko.neko.mate.fail": "§c 好像失败了呢",
